View space rotation (or the gizmo for it) is broken #62068

Closed
opened 2019-03-01 01:31:10 +01:00 by kursad k · 3 comments
Member

System Information
Operating system: Windows
Graphics card: GTX 1070

Blender Version
Broken: blender-2.80.0-git.d7d180bd3d8d-windows64

Short description of error
View space rotation seems to be broken both in edit mode and object mode.

Exact steps for others to reproduce the error

Add Suzanne

Enable Transform with gizmo

Rotate Suzanne in view space using the white circle. (Works)

Now rotate on X (red circle) slightly (Works)

Now try to grab the white circle (view rotation) and try to rotate (Broken)

**System Information** Operating system: Windows Graphics card: GTX 1070 **Blender Version** Broken: blender-2.80.0-git.d7d180bd3d8d-windows64 **Short description of error** View space rotation seems to be broken both in edit mode and object mode. **Exact steps for others to reproduce the error** Add Suzanne Enable Transform with gizmo Rotate Suzanne in view space using the white circle. (Works) Now rotate on X (red circle) slightly (Works) Now try to grab the white circle (view rotation) and try to rotate (Broken)
Author
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
kursad k changed title from View space rotation is broken to View space rotation (or the gizmo for it) is broken 2019-03-01 01:31:24 +01:00

This issue was referenced by 3bcad47357

This issue was referenced by 3bcad47357a5ba4dc7b95f2ce40b4a2d71546eee

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62068
No description provided.