Fix T62068: rotation incorrectly re-uses axis

Regression in recent transform changes.